--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
 }
 
 .body {
@@ -11,12 +12,199 @@
   justify-content: center;
 }
 
-.container {
-  width: 800px;
-  margin: 0 auto;
-  margin-top: 120px;
-  border-radius: 40px;
+.generator {
+  width: 100%;
+  border-radius: 40px 40px 0 0;
   text-align: center;
   background-color: #ffffff;
   color: #353535;
+  padding: 60px 20px;
+  padding-bottom: 140px;
+}
+
+.container {
+  margin: 0 auto;
+  max-width: 700px;
+}
+
+.title {
+  margin-bottom: 10px;
+  font-size: 32px;
+  font-weight: 600;
+}
+
+.description {
+  margin: 0 auto;
+  margin-bottom: 40px;
+  font-size: 18px;
+  max-width: 600px;
+}
+
+.input-area {
+  min-height: 70px;
+  display: flex;
+  margin-bottom: 50px;
+  position: relative;
+  box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.1);
+  border-radius: 6px;
+}
+
+.input-area::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: green;
+  height: 4px;
+  border-radius: 2px;
+}
+
+.input-password {
+  flex-grow: 1;
+  padding: 12px 20px;
+  font-size: 28px;
+  font-weight: 600;
+  border: transparent;
+  outline: none;
+}
+
+.copy-pass-btn {
+  width: 60px;
+  background-image: url('../img/copy-btn-icon.svg');
+  background-size: 30px;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-color: #ffffff;
+  border-radius: 10px;
+  border: transparent;
+}
+
+.password-option {
+  text-align: left;
+}
+
+.title-option {
+  margin-bottom: 20px;
+}
+
+.option-wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-auto-flow: column;
+  grid-template-rows: repeat(4, 1fr);
+}
+
+.option-wrapper div {
+  padding: 7px 0;
+}
+
+.label-checkbox {
+  font-size: 18px;
+  font-weight: 500;
+}
+
+/* CUSTOM CHECKBOX  */
+.custom-checkbox {
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+}
+
+.custom-checkbox + label {
+  display: inline-flex;
+  align-items: center;
+  user-select: none;
+}
+.custom-checkbox + label::before {
+  content: '';
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  flex-shrink: 0;
+  flex-grow: 0;
+  border: 1px solid #adb5bd;
+  border-radius: 0.25em;
+  margin-right: 0.5em;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 50% 50%;
+}
+
+.custom-checkbox:checked + label::before {
+  border-color: #0b76ef;
+  background-color: #0b76ef;
+  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
+}
+
+/* стили при наведении курсора на checkbox */
+.custom-checkbox:not(:disabled):not(:checked) + label:hover::before {
+  border-color: #b3d7ff;
+}
+/* стили для активного состояния чекбокса (при нажатии на него) */
+.custom-checkbox:not(:disabled):active + label::before {
+  background-color: #b3d7ff;
+  border-color: #b3d7ff;
+}
+/* стили для чекбокса, находящегося в фокусе */
+.custom-checkbox:focus-visible + label::before {
+  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+}
+/* стили для чекбокса, находящегося в фокусе и не находящегося в состоянии checked */
+.custom-checkbox:focus-visible:not(:checked) + label::before {
+  border-color: #80bdff;
+}
+/* стили для чекбокса, находящегося в состоянии disabled */
+.custom-checkbox:disabled + label::before {
+  background-color: #e9ecef;
+}
+
+.lenght-pass {
+  grid-row: 1 / 5;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.label-length {
+  font-size: 20px;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
+.counter-length {
+  margin-top: 20px;
+}
+
+.input-length {
+  font-size: 32px;
+  width: 80px;
+  font-weight: 700;
+  text-align: center;
+  border: none;
+  color: #0b76ef;
+}
+
+.operator-length {
+  border: 2px solid #353535;
+  border-radius: 20px;
+  width: 40px;
+  height: 40px;
+  background-color: #ffffff;
+  font-size: 30px;
+  font-weight: 700;
+  color: #353535;
+  cursor: pointer;
+}
+
+.generate-password {
+  background-color: #53c81b;
+  color: #ffffff;
+  cursor: pointer;
+  border: none;
+  padding: 20px 40px;
+  font-size: 32px;
+  border-radius: 50px;
+  margin: 30px auto;
 }
