--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,10 @@
   font-family: 'Roboto', sans-serif;
 }
 
+textarea {
+  padding: 0;
+}
+
 .body {
   min-height: 100vh;
   background-color: #ebf2fa;
@@ -78,6 +82,14 @@
   background-color: #ffffff;
   border-radius: 10px;
   border: transparent;
+  cursor: pointer;
+}
+
+.copy-pass-btn:active {
+  background-color: #d3d3d3;
+}
+
+@media (min-width: 580px) {
 }
 
 .password-option {
@@ -208,3 +220,52 @@
   border-radius: 50px;
   margin: 30px auto;
 }
+
+@media (max-width: 580px) {
+  .title {
+    font-size: 28px;
+  }
+
+  .description {
+    font-size: 16px;
+  }
+
+  .input-password {
+    font-size: 20px;
+  }
+
+  /* .title-option {
+    text-align: center;
+  } */
+
+  .option-wrapper {
+    grid-auto-flow: row;
+    grid-template-columns: 1fr;
+  }
+
+  .generate-password {
+    padding: 14px 24px;
+    font-size: 20px;
+    margin-left: 0;
+  }
+
+  .lenght-pass  {
+    grid-row: initial;
+    align-items: flex-start;
+    margin-top: 20px;
+  }
+
+  .generator {
+    text-align: start;
+  }
+
+  .label-length {
+    font-size: 1.5em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+    text-transform: none;
+  }
+}
+
+
